[gd_scene load_steps=4 format=3 uid="uid://bd1q1rloghtpe"]

[ext_resource type="Script" path="res://scenes/platform/platform.gd" id="1_6sh16"]

[sub_resource type="Animation" id="Animation_pws44"]
resource_name = "spawn"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlatformPivot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, -10, 0, 1, 1, 0, 0, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlatformPivot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01dlw"]
_data = {
"spawn": SubResource("Animation_pws44")
}

[node name="Platform" type="Node3D"]
script = ExtResource("1_6sh16")

[node name="LifeSpanTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_01dlw")
}

[node name="PlatformPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[connection signal="timeout" from="LifeSpanTimer" to="." method="_on_life_span_timer_timeout"]
